<resources>
    <string name="app_name">BotonPanico</string>
    <string name="activityperfilciudadano_tv_titulo">Completa tu perfil</string>

    <string name="activityperfilciudadano_et_numerodocumento_hint">Numero de documento</string>
    <string name="activityperfilciudadano_et_apellido_paterno_hint">Apellido Paterno</string>
    <string name="activityperfilciudadano_et_apellido_materno_hint">Apellido Materno</string>
    <string name="activityperfilciudadano_et_nombre_hint">Nombre</string>
    <string name="activityperfilciudadano_et_numerocelular_hint">Numero de Celular</string>
    <string name="activityperfilciudadano_et_correo_hint">Correo</string>
    <string name="activityperfilciudadano_et_direccion_hint">Direccion</string>
    <string name="activityperfilciudadano_btn_user">Guardar datos</string>


    <string name="actini_btn_sos">SOS</string>
    <string name="actini_btn_inicio">Inicio</string>
    <string name="actini_btn_incendio">Incendio</string>
    <string name="actini_btn_asistencia">Asistencia</string>
    <string name="actini_btn_otro">Otra Incidencia</string>

</resources>