<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.InicioActivity">


    <Button
        android:id="@+id/actini_btn_aux1"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="@dimen/margin_grande"
        android:layout_marginTop="@dimen/margin_grande"
        android:layout_marginEnd="@dimen/margin_grande"
        android:background="@drawable/btn_principal_sos"
        android:text="@string/actini_btn_sos"
        android:textSize="30sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/actini_btn_otro"/>


    <Button
        android:id="@+id/actini_btn_aux2"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginStart="@dimen/margin_grande"
        android:layout_marginTop="@dimen/margin_grande"
        android:layout_marginEnd="@dimen/margin_pequeno"
        android:text="@string/actini_btn_incendio"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/actini_btn_aux3"
        app:layout_constraintTop_toBottomOf="@id/actini_btn_aux1"
        app:backgroundTint="@null"
        android:background="@drawable/btn_principal_secundarios"/>

    <Button
        android:id="@+id/actini_btn_aux3"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginStart="@dimen/margin_pequeno"
        android:layout_marginTop="@dimen/margin_grande"
        android:layout_marginEnd="@dimen/margin_grande"
        android:text="@string/actini_btn_asistencia"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actini_btn_aux1"
        app:layout_constraintStart_toEndOf="@id/actini_btn_aux2"
        app:backgroundTint="@null"
        android:background="@drawable/btn_principal_terciario"/>

    <Button
        android:id="@+id/actini_btn_otro"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/margin_pequeno"
        android:layout_marginBottom="@dimen/margin_grande"
        android:layout_marginEnd="@dimen/margin_grande"
        android:text="@string/actini_btn_otro"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>